fix some layout issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 				<li><a href="/">Home</a></li>		      
-	        		<li><a href="bruno.plantier.net">CV</a></li>     
+	        		<li><a href="http://bruno.plantier.net">CV</a></li>     
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -20,7 +20,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:bruno@plantier.net">email</a></li>
-	        		<li><a href="https://github.com/bplantier">github.com/hankquinlan</a></li>
+	        		<li><a href="https://github.com/bplantier">github.com/bplantier</a></li>
 				</ul>
 			</footer>
 		</body>
