--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<meta name="google-site-verification" content="dybuwzKzz1ziYdTTpm3D-gHl18ObDx793YLIh_KDmy0" />
 		</head>
 		<body>
 			<nav>
